--- a/Lesson_07/input-output/input.liquid
+++ b/Lesson_07/input-output/input.liquid
@@ -14,6 +14,6 @@
   ReadInput >> npart;
   ReadInput >> rho;
   ReadInput >> rcut;
-  ReadInput >> delta;
+  ReadInput >> delta; 0.0005
   ReadInput >> nblk; 50 
   ReadInput >> nstep; 2000
